[gd_scene load_steps=24 format=2]

[ext_resource path="res://Assets/Sprites/ENEMY/Walk/Chimera_Walk_0.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/ENEMY/Walk/Chimera_Walk_3.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/ENEMY/Walk/Chimera_Walk_1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/ENEMY/Idle/Chimera_Idle_3.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/ENEMY/Idle/Chimera_Idle_4.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/ENEMY/Idle/Chimera_Idle_1.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/ENEMY/Idle/Chimera_Idle_2.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/ENEMY/Walk/Chimera_Walk_6.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/ENEMY/Idle/Chimera_Idle_0.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/ENEMY/Walk/Chimera_Walk_4.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sprites/ENEMY/Walk/Chimera_Walk_2.png" type="Texture" id=11]
[ext_resource path="res://Assets/Sprites/ENEMY/Walk/Chimera_Walk_5.png" type="Texture" id=12]
[ext_resource path="res://Assets/Sprites/ENEMY/Walk/Chimera_Walk_7.png" type="Texture" id=13]
[ext_resource path="res://Characters/enemies/Chimera/Chimera.gd" type="Script" id=14]
[ext_resource path="res://Characters/enemies/Chimera/states/fall.gd" type="Script" id=15]
[ext_resource path="res://Characters/enemies/Chimera/states/chase.gd" type="Script" id=16]
[ext_resource path="res://Characters/enemies/Chimera/states/search.gd" type="Script" id=17]
[ext_resource path="res://Characters/enemies/Chimera/states/patrol.gd" type="Script" id=18]
[ext_resource path="res://Characters/enemies/Chimera/states/idle.gd" type="Script" id=19]
[ext_resource path="res://Characters/Player/gui/CooldownBar.tscn" type="PackedScene" id=21]
[ext_resource path="res://engine/Physics2D.gd" type="Script" id=28]

[sub_resource type="CapsuleShape2D" id=1]
radius = 230.69
height = 342.446

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "Idle",
"speed": 6.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 11 ), ExtResource( 2 ), ExtResource( 10 ), ExtResource( 12 ), ExtResource( 8 ), ExtResource( 13 ) ],
"loop": true,
"name": "Move",
"speed": 12.0
}, {
"frames": [  ],
"loop": true,
"name": "Run",
"speed": 5.0
} ]

[node name="Chimera" type="KinematicBody2D"]
script = ExtResource( 14 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2, 118 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "Move"
frame = 1

[node name="Physics2D" type="Node2D" parent="."]
script = ExtResource( 28 )

[node name="CooldownTimer" type="Timer" parent="."]

[node name="CooldownBar" parent="." instance=ExtResource( 21 )]

[node name="States" type="Node2D" parent="."]

[node name="Idle" type="Node2D" parent="States"]
script = ExtResource( 19 )

[node name="Fall" type="Node2D" parent="States"]
script = ExtResource( 15 )

[node name="Chase" type="Node2D" parent="States"]
script = ExtResource( 16 )

[node name="Search" type="Node2D" parent="States"]
script = ExtResource( 17 )

[node name="Patrol" type="Node2D" parent="States"]
script = ExtResource( 18 )
